--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@
 }
 
 .container .content h3 span{
-   background: crimson;
+   background: #0d6efd;
    color:#fff;
    border-radius: 5px;
    padding:0 15px;
@@ -39,7 +39,7 @@
 }
 
 .container .content h1 span{
-   color:crimson;
+   color:#0d6efd;
 }
 
 .container .content p{
@@ -58,7 +58,7 @@
 }
 
 .container .content .btn:hover{
-   background: crimson;
+   background: #0d6efd;
 }
 
 .form-container{
@@ -103,14 +103,14 @@
 
 .form-container form .form-btn{
    background: #fbd0d9;
-   color:crimson;
+   color:#0d6efd;
    text-transform: capitalize;
    font-size: 20px;
    cursor: pointer;
 }
 
 .form-container form .form-btn:hover{
-   background: crimson;
+   background: #0d6efd;
    color:#fff;
 }
 
@@ -121,15 +121,17 @@
 }
 
 .form-container form p a{
-   color:crimson;
+   color:#0d6efd;
 }
 
 .form-container form .error-msg{
    margin:10px 0;
    display: block;
-   background: crimson;
+   background: #0d6efd;
    color:#fff;
    border-radius: 5px;
    font-size: 20px;
    padding:10px;
 }
+
+
